Fixed spacing issue
Added a min-height to the portfolio-entries to prevent blank spaces
caused by text wrapping.

--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -210,6 +210,7 @@ footer {
 		width: 48%;
 		float: left;
 		font-size: .75em;
+		min-height: 380px;
 	}
 
 	h2 {
